--- a/manifest.json
+++ b/manifest.json
@@ -2,43 +2,42 @@
   "manifest_version": 2,
   "name": "HabitRPG",
   "version": "0.0.1",
-  "description": "Plugs into various websites to give you Exp for positive tasks.",
+  "description": "Monitors your browsing habits to divvy points to your HabitRPG character.",
   "options_page": "options.html",
-  "page_action": {
+  /*"page_action": {
     "default_icon": "img/icon-19.png",
     "default_title": "HabitRPG"
+  },*/
+ "background": {
+    "scripts": ["background.js"]
   },
-  "permissions": ["tabs", "http://habitrpg.com/"],
+  "permissions": [
+    //"tabs", 
+    "notifications",
+    "http://habitrpg.com/"
+  ],
   "content_scripts": [
   	{
       "matches": [ "http://*/*", "https://*/*" ], // needed since timing many websites
-      "css": [ "vendor/Gritter/css/jquery.gritter.css" ], 
       "js": [
         "vendor/jquery-1.8.0.min.js", 
         "vendor/underscore-min.js",
-        "vendor/Gritter/js/jquery.gritter.js", 
+        //"vendor/jquery.watch.js", 
         "habitrpg.js",
         "options.js"
-       ],
-      "runat":"document_end"
+       ]
     }
   ],
-  "background": {
-    "scripts": ["background.js"]
-  },
   "icons": {
     "19" : "img/icon-19.png",
     "48" : "img/icon-48.png",
     "128" : "img/icon-128.png"
   },
   "web_accessible_resources": [ 
-    "vendor/Gritter/images/gritter.png",
-    "vendor/Gritter/images/gritter-light.png", 
-    "vendor/Gritter/images/gritter-long.png", 
-    "vendor/Gritter/images/ie-spacer.gif", 
-    "vendor/Gritter/images/trees.png", 
     "img/add.png", 
     "img/remove.png", 
-    "img/icon-48.png" 
+    "img/icon-48.png",
+    "img/icon-48-up.png", 
+    "img/icon-48-down.png" 
   ]
 }
