--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "HabitRPG",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Monitors your browsing habits to divvy points to your HabitRPG character.",
   "options_page": "options.html",
   /*"page_action": {
@@ -21,7 +21,7 @@
       "matches": [ "http://*/*", "https://*/*" ], // needed since timing many websites
       "js": [
         "vendor/jquery-1.8.0.min.js", 
-        "vendor/underscore-min.js",
+        "vendor/lodash.min.js",
         //"vendor/jquery.watch.js", 
         "habitrpg.js",
         "options.js"
