--- a/manifest.json
+++ b/manifest.json
@@ -1,40 +1,39 @@
 {
-  "manifest_version": 2,
-  "name": "HabitRPG",
-  "version": "0.0.3",
-  "description": "Monitors your browsing habits to divvy points to your HabitRPG character.",
-  "options_page": "options.html",
-  /*"page_action": {
-    "default_icon": "img/icon-19.png",
-    "default_title": "HabitRPG"
-  },*/
- "background": {
-    "scripts": ["background.js"]
-  },
-  "permissions": [
-    //"tabs", 
-    "notifications",
-    "http://habitrpg.com/"
-  ],
-  "content_scripts": [
-  	{
-      "matches": [ "http://*/*", "https://*/*" ], // needed since timing many websites
-      "js": [
-        "vendor/jquery-1.8.0.min.js", 
-        "vendor/lodash.min.js",
-        //"vendor/jquery.watch.js", 
-        "habitrpg.js",
-        "options.js"
-       ]
-    }
-  ],
-  "icons": {
-    "19" : "img/icon-19.png",
-    "48" : "img/icon-48.png",
-    "128" : "img/icon-128.png"
-  },
-  "web_accessible_resources": [ 
-    "img/icon-48-up.png", 
-    "img/icon-48-down.png" 
-  ]
+   "manifest_version":2,
+   "name":"HabitRPG",
+   "version":"0.0.8",
+   "description":"Monitors your browsing habits to divvy points to your HabitRPG character.",
+   "options_page":"options.html",
+   "background":{
+      "scripts":[
+         "background.js"
+      ]
+   },
+   "permissions":[
+      "notifications",
+      "https://habitrpg.com/"
+   ],
+   "content_scripts":[
+      {
+         "matches":[
+            "http://*/*",
+            "https://*/*"
+         ],
+         "js":[
+            "vendor/jquery-1.8.0.min.js",
+            "vendor/lodash.min.js",
+            "habitrpg.js",
+            "options.js"
+         ]
+      }
+   ],
+   "icons":{
+      "19":"img/icon-19.png",
+      "48":"img/icon-48.png",
+      "128":"img/icon-128.png"
+   },
+   "web_accessible_resources":[
+      "img/icon-48-up.png",
+      "img/icon-48-down.png"
+   ]
 }
