--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
 
    "name": "HabitRPG",
-   "version": "0.5",
+   "version": "0.6",
    "permissions": ["storage", "tabs", "webNavigation", "notifications", "https://habitrpg.com/", "http://tomato.es/" ],
   
    "description": "Monitors your browsing habits to divvy points to your HabitRPG character.",
-   "web_accessible_resources": [ "img/icon-48-up.png", "img/icon-48-down.png" ],
+   "web_accessible_resources": [ "img/icon-48.png", "img/icon-48-up.png", "img/icon-48-down.png" ],
    "icons": {
       "128": "img/icon-128.png",
       "19": "img/icon-19.png",
