Better alert icon

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
    
    "page_action" :
    {
-   "default_icon" : "img/icon-48-alert.png",
+   "default_icon" : "img/icon-48-alert2.png",
    "default_title" : "Vice list site!"
    },
 
