Re-Added address bar status icon.
Status icon now appears if you are on a page that is currently classed
as a vice site.

Fixed context menu support for subdomain whitelisting.

--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,11 @@
       "48": "img/icon-48.png"
    },
    
+   "page_action" :
+	{
+	"default_icon" : "img/icon-48-alert.png",
+	"default_title" : "Vice list site!"
+	},
    
    "manifest_version": 2,
    "name": "HabitRPG",
