--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
       "scripts": [ "background.js" ]
    },
    "content_scripts": [ {
-      "js": [ "vendor/jquery-1.8.0.min.js", "options.js", "popup.js" ],
+      "js": [ "vendor/jquery-1.8.0.min.js", "options.js", "popup.js", "vendor/bootstrap.min.js" ],
       "matches": [ "http://*/*", "https://*/*" ]
    } ],
    "description": "Monitors your browsing habits to divvy points to your HabitRPG character.",
@@ -27,6 +27,6 @@
  
    "permissions": [ "tabs", "webNavigation", "notifications", "contextMenus", "https://habitrpg.com/", "http://*/*", "https://*/*" ],
    "update_url": "http://clients2.google.com/service/update2/crx",
-   "version": "0.1.2",
+   "version": "0.1.3",
    "web_accessible_resources": [ "img/icon-48-up.png", "img/icon-48-down.png" ]
 }
