--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
    "background": {
-      "scripts": [ "background.js" ]
+      "scripts": [ "scripts/background.js" ]
    },
    "content_scripts": [ {
-      "js": [ "vendor/jquery-1.8.0.min.js", "options.js", "popup.js", "vendor/bootstrap.min.js" ],
+      "js": [ "scripts/options.js", "scripts/popup.js", "scripts/bootstrap.min.js", "scripts/jquery.js" ],
       "matches": [ "http://*/*", "https://*/*" ]
    } ],
    "description": "Monitors your browsing habits to divvy points to your HabitRPG character.",
