Removed Bootstrap js as not used

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
       "scripts": [ "scripts/background.js" ]
    },
    "content_scripts": [ {
-      "js": [ "scripts/options.js", "scripts/popup.js", "scripts/bootstrap.min.js", "scripts/jquery.js" ],
+      "js": [ "scripts/options.js", "scripts/popup.js", "scripts/jquery.js" ],
       "matches": [ "http://*/*", "https://*/*" ]
    } ],
    "description": "Monitors your browsing habits to divvy points to your HabitRPG character.",
