--- a/chrome/data/manifest.json
+++ b/chrome/data/manifest.json
@@ -22,6 +22,12 @@
    "background": {
         "page": "background.html"
    },
+
+   "browser_action": {
+      "default_icon": "img/icon-48.png",   
+      "default_title": "HabitRPG",
+      "default_popup": "popup.html"
+    },
    
    "content_scripts": [
     {
