--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-concat": "~0.1.3",
     "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-jasmine": "~0.3.2"
+    "grunt-contrib-jasmine": "~0.3.2",
+    "markdown" : "0.5.0"
   }
 }
